tests/fixtures/valid/project-tier.toi
{
  "$toi": "1.0.0",
  "$tier": "project",
  "$created": "2026-03-31",
  "identity": {
    "author": "nlt-toi maintainers"
  },
  "communication": {
    "tone": "professional",
    "verbosity": "concise",
    "structure": "linear"
  },
  "privacy": {
    "retention": "session-only",
    "training_use": "prohibited"
  }
}
