tests/fixtures/invalid/bad-uuid.toi
{
  "$toi": "1.0.0",
  "$tier": "personal",
  "$id": "not-a-valid-uuid",
  "identity": {
    "author": "bad id"
  }
}
